--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -9,7 +9,7 @@ on:
 env:
   DOCKER_IMAGE: ghcr.io/${{ github.actor }}/luty-server-deploy
   VERSION: ${{ github.sha }}
-  NAME: go_cicd
+  NAME: luty-server
 
 jobs:
   # 빌드 Job
@@ -53,7 +53,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
@@ -83,4 +83,4 @@ jobs:
           sudo docker stop ${{ env.NAME }} || true
           sudo docker rm ${{ env.NAME }} || true
           sudo docker rmi ${{ env.DOCKER_IMAGE }}:latest || true
-          sudo docker run -d -p 80:8080 --name spring-deploy --restart always ${{ env.DOCKER_IMAGE }}:latest
+          sudo docker run -d -p 80:8080 --name luty-server --restart always ${{ env.DOCKER_IMAGE }}:latest
