--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -11,7 +11,7 @@ permissions:
 
 # 환경설정
 env:
-  DOCKER_IMAGE: ghcr.io/${{ github.repository_owner.toLowerCase() }}/luty-server-deploy
+  DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/luty-server-deploy
   VERSION: ${{ github.sha }}
   NAME: luty-server
 
@@ -43,6 +43,12 @@ jobs:
       - name: Set up docker buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
+
+      - name: Set Docker Image Name
+        run: echo "DOCKER_IMAGE=ghcr.io/$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')/luty-server-deploy" >> $GITHUB_ENV
+
+      - name: Verify DOCKER_IMAGE
+        run: echo ${{ env.DOCKER_IMAGE }}
 
       - name: Cache docker layers
         uses: actions/cache@v2
