--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -81,6 +81,12 @@ jobs:
     name: Deploy
     runs-on: [ self-hosted, label-go ] # AWS ./configure에서 사용할 label명
     steps:
+      - name: Set Docker Image Name
+        run: echo "DOCKER_IMAGE=ghcr.io/$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')/luty-server-deploy" >> $GITHUB_ENV
+
+      - name: Verify DOCKER_IMAGE
+        run: echo ${{ env.DOCKER_IMAGE }}
+
       - name: Login to ghcr
         uses: docker/login-action@v1
         with:
