inital setting: connecting db

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -107,3 +107,4 @@ jobs:
           docker-compose down || true
           docker-compose pull || true
           docker-compose up -d || true
+          docker compose ps
