--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,16 +2,17 @@ version: "2.5"
 
 services:
   mysql:
-    image: mysql:8.0
+    image: mysql:8.0.33
+    platform: linux/amd64
     container_name: ruty-mysql
     restart: always
     environment:
       MYSQL_DATABASE: ruty_db
       MYSQL_USER: ruty
       MYSQL_PASSWORD: bunnies
-    volumes:
-      - db_data:/var/lib/mysql
-      - ./db/conf.d:/etc/mysql/conf.d
+#    volumes:
+#      - db_data:/var/lib/mysql
+#      - ./db/conf.d:/etc/mysql/conf.d
     ports:
       - "3307:3306"
     networks:
@@ -19,10 +20,11 @@ services:
 
   ruty-server:
     image: ghcr.io/central-makeus/ruty-server-deploy:latest
+    platform: linux/amd64
     container_name: ruty-server
     restart: always
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/ruty-db
+      SPRING_DATASOURCE_URL: jdbc:mysql://ruty-mysql:3306/ruty-db
       SPRING_DATASOURCE_USERNAME: ruty
       SPRING_DATASOURCE_PASSWORD: bunnies
     ports:
