--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -14,6 +14,7 @@ env:
   DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/ruty-server-deploy
   VERSION: ${{ github.sha }}
   NAME: ruty-server
+  GCP_USER: gcptest0914
 
 jobs:
   # 빌드 Job
@@ -74,6 +75,11 @@ jobs:
           push: true
           tags: ${{ env.DOCKER_IMAGE }}:latest
           context: .
+      # docker-compose 파일을 VM으로 복사
+      - name: Copy docker-compose.yml to VM
+        run: |
+          scp -i ${{ secrets.GCP_PRIVATE_KEY }} ~/Github/ruty-server/docker-compose.yaml ${{ env.GCP_USER }}@${{ secrets.GCP_HOST }}:/home/${{ env.GCP_USER }}/
+
 
   # 배포 Job
   deploy:
