--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -65,7 +65,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CICD_TOKEN }}
 
       - name: Build and push
         id: docker_build
@@ -93,7 +93,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CICD_TOKEN }}
 
       # SSH Key 설정
       - name: Set up SSH Key
