--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
     // security
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
-    // jwt
-//    implementation 'io.jsonwebtoken:jjwt-api'
-//    implementation 'io.jsonwebtoken:jjwt-impl'
-//    implementation 'io.jsonwebtoken:jjwt-jackson'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
+    // jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
     // lombok
     compileOnly 'org.projectlombok:lombok'
@@ -36,13 +37,20 @@ dependencies {
     // jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-
     // db(mysql)
     implementation 'mysql:mysql-connector-java:8.0.33'
 
-    //test
+    // swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+
+    // thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+
+    // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+
 
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
