--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,9 @@
 server:
   port: 8080
-  servlet:
-    context-path: /api
 
 spring:
   profiles:
-    include: oauth
+    include: oauth, jwt
 
   application:
     name: ruty-server
@@ -13,7 +11,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
 #    url: jdbc:mysql://localhost:3306/ruty_db
-    url: jdbc:mysql://ruty-mysql:3306/ruty_db
+    url: jdbc:mysql://34.59.214.93:3306/ruty_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#    url: jdbc:mysql://ruty-mysql:3306/ruty_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: ruty
     password: bunnies
 
