google & apple oauth developing

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ out/
 .vscode/
 
 src/main/resources/application-oauth.yml
+src/main/resources/application-jwt.yml
+src/main/resources/static/AuthKey_6K9W84675H.p8
+
