--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.33'
 
     // swagger
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0"
 
     // thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
