인증,인가 에러설정, pm요구사항 맞게 게스트 모드를 위한 권한설정 수정

--- a/build.gradle
+++ b/build.gradle
@@ -58,10 +58,12 @@ dependencies {
     // openai
     implementation 'org.springframework.boot:spring-boot-devtools'
 
+    // batch
+
+
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
-
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
