--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     # localhost
-    url: jdbc:mysql://localhost:3306/ruty_db
+    url: jdbc:mysql://localhost:3306/ruty_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     # gcp vm mysql
 #    url: jdbc:mysql://34.59.214.93:3306/ruty_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     # docker mysql
