--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -33,12 +33,12 @@ jobs:
 
       # application-database.yml 파일 생성
       # GitHub-Actions 에서 설정한 값을 application-database.yml 파일에 쓰기
-      - name: make application-jwt.yml
-        run: |
-          cd ./src/main/resources
-          touch ./application-jwt.yml
-          echo "${{ secrets.DATABASE }}" >> ./application-database.yml
-        shell: bash
+#      - name: make application-jwt.yml
+#        run: |
+#          cd ./src/main/resources
+#          touch ./application-jwt.yml
+#          echo "${{ secrets.DATABASE }}" >> ./application-database.yml
+#        shell: bash
 
       # Build 파일 생성하기
       - name: Build with Gradle
