--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -33,12 +33,26 @@ jobs:
 
       # application-database.yml 파일 생성
       # GitHub-Actions 에서 설정한 값을 application-database.yml 파일에 쓰기
-#      - name: make application-jwt.yml
-#        run: |
-#          cd ./src/main/resources
-#          touch ./application-jwt.yml
-#          echo "${{ secrets.DATABASE }}" >> ./application-database.yml
-#        shell: bash
+      - name: make application-ai.yml
+        run: |
+          cd ./src/main/resources
+          touch ./application-ai.yml
+          echo "${{ secrets.AI_YML }}" >> ./application-ai.yml
+        shell: bash
+
+      - name: make application-jwt.yml
+        run: |
+          cd ./src/main/resources
+          touch ./application-jwt.yml
+          echo "${{ secrets.JWT_YML }}" >> ./application-jwt.yml
+        shell: bash
+
+      - name: make application-oauth.yml
+        run: |
+          cd ./src/main/resources
+          touch ./application-oauth.yml
+          echo "${{ secrets.OAUTH_YML }}" >> ./application-oauth.yml
+        shell: bash
 
       # Build 파일 생성하기
       - name: Build with Gradle
