--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,14 +8,25 @@ spring:
   application:
     name: ruty-server
 
-  datasource:
+  datasource-data:
     driver-class-name: com.mysql.cj.jdbc.Driver
     # localhost
-#    url: jdbc:mysql://localhost:3306/ruty_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    jdbc-url: jdbc:mysql://localhost:3306/ruty_db?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
     # gcp vm mysql
 #    url: jdbc:mysql://34.59.214.93:3306/ruty_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     # docker mysql
-    url: jdbc:mysql://ruty-mysql:3306/ruty_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#    url: jdbc:mysql://ruty-mysql:3306/ruty_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: ruty
+    password: bunnies
+
+  datasource-meta:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+      # localhost
+    jdbc-url: jdbc:mysql://localhost:3306/ruty_db_meta?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+      # gcp vm mysql
+      #    url: jdbc:mysql://34.59.214.93:3306/ruty_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+      # docker mysql
+#      url: jdbc:mysql://ruty-mysql:3306/ruty_db_meta?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: ruty
     password: bunnies
 
@@ -30,3 +41,9 @@ spring:
     generate-ddl: true
     database-platform: org.hibernate.dialect.MySQLDialect
 
+  batch:
+    job:
+      enabled: false
+    jdbc:
+      initialize-schema: always
+      schema: org/springframework/batch/core/schema-mysql.sql
