--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       naming:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -46,4 +46,4 @@ spring:
       enabled: false
     jdbc:
       initialize-schema: always
-      schema: org/springframework/batch/core/schema-mysql.sql
+      schema: classpath:org/springframework/batch/core/schema-mysql.sql
